--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,6 @@
-clist=document.getElementById("comment-list")
-clist.innerHTML+="<%= render 'comments/comments' %>"
+clist=document.getElementById("individual-comment")
+newComment="<%= j render partial: 'comments/comment', locals: { commenter: @comment.commenter, body: @comment.body } %>"
+newComment+=clist.innerHTML
+clist.innerHTML=newComment
+document.getElementById("comment_commenter").value=""
+document.getElementById("comment_body").value=""
