--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Posts</h1>
 
-<table>
+<table border="1">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
+      <th align="left">Title</th>
+      <th align="left">Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
