--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,14 @@
-<h2>Add a comment:</h2>
+<h3>Add a comment:</h3>
 <%= form_with model: [ @post, @post.comments.build ], local: false do |form| %>
   <p>
-    <%= form.label :commenter %><br>
+    <%= form.label :commenter, :class => "h5" %><br>
     <%= form.text_field :commenter, required: true %>
   </p>
   <p>
-    <%= form.label :body %><br>
+    <%= form.label :body, :class => "h5" %><br>
     <%= form.text_area :body %>
   </p>
   <p>
-    <%= form.submit %>
+    <%= form.submit :class => "btn btn-primary" %>
   </p>
 <% end %>
