--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Post</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8">
+      
+      <h1>Editing Post</h1>
+      
+      <%= render 'form', post: @post %>
 
-<%= render 'form', post: @post %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+      <%= link_to 'Show', @post, :class=>"btn btn-secondary text-light"%> |
+      <%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+    </div>
+    <div class="col-2">
+    </div>
+  </div>
+</div>
