--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,49 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
 
-<h1>Posts</h1>
+  <div class="row">
 
-<table border="1">
-  <thead>
-    <tr>
-      <th align="left">Title</th>
-      <th align="left">Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-2">
+    </div>
+    
+    <div class="col-8 bg-light">
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <p id="notice"><%= notice %></p>
+      
+      <h1>Posts</h1>
+      
+      <table class="table">
+	<thead class="thead-dark">
+	  <tr>
+	    <th class="text-left font-weight-bold"><h3>Title</h3></th>
+	    <th class="text-left font-weight-bold"><h4>Body</h4></th>
+	    <th colspan="3"></th>
+	  </tr>
+	</thead>
+	
+	<tbody>
+	  <% @posts.each do |post| %>
+	  <tr>
+	    <td><%= post.title %></td>
+	    <td><%= post.body %></td>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+	    
+	      <td><%= link_to 'Show', post, :class=>"btn btn-secondary text-light"  %></td>
+	      
+	    <td><%= link_to 'Edit', edit_post_path(post), :class=>"btn btn-secondary text-light" %></td>
+	    <td><%= link_to 'Destroy', post, :class=>"btn btn-secondary text-light", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	    
+	  </tr>
+	  <% end %>
+	</tbody>
+      </table>
+      
+      <br>
+      
+      <%= link_to 'New Post', new_post_path, :class=>"btn btn-secondary text-light" %>
+    </div>
+    
+    <div class="col-2">
+    </div>
+    
+  </div>
+</div>
