--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+  <div class="row">
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+    <div class="col-2">
+    </div>
 
-<%= render 'comments/form' %>
+    <div class="col-8 bg-light">
+      <p id="notice"><%= notice %></p>
 
-<%= render 'comments/comments' %>
+      <p>
+	<h2>Title:</h2>
+	<h5><%= @post.title %></h5>
+      </p>
+      
+      <p>
+	<h3>Body:</h3>
+	<h5><%= @post.body %></h5>
+      </p>
+      
+      <%= render 'comments/form' %>
+      
+      <%= render 'comments/comments' %>
+      
+      
+      <%= link_to 'Edit', edit_post_path(@post), :class=>"btn btn-secondary text-light" %> |
+      <%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+    </div>
 
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+    <div class="col-2">
+    </div>
+  </div>
+</div>
