--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,27 +1,42 @@
 <%= form_with model: post do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-      <ul>
-        <% post.errors.each do |error| %>
+<div class="card">
+  <div class="card-body">
+
+    <% if post.errors.any? %>
+
+      <div id="error_explanation">
+	<h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+	
+	<ul>
+          <% post.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
-      </ul>
+	</ul>
+      </div>
+
+    <% end %>
+
+    <div class="form-group">
+      <div class="field">
+	<%= form.label :title , {class: "form-label"} %>
+	<%= form.text_field :title , {class: "form-control", placeholder: "Post Title"} %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :title , class: "control-label" %>
-    <%= form.text_field :title %>
-  </div>
+    <div class="form-group">
+      <div class="field">
+	<%= form.label :body , {class: "form-label"} %>
+	<%= form.text_area :body , {class: "form-control", placeholder: "Post Text"} %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
+    
+    <div class="actions">
+      <%= form.submit :class => "btn btn-primary" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit :class => "btn btn-primary" %>
   </div>
+</div>
+
 <% end %>
