--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Post</h1>
+<div class="container-fluid">
 
-<%= render 'form', post: @post %>
+  <div class="row">
 
-<%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+    <div class="col-2">
+    </div>
+
+    <div class="col-8 bg-light">
+
+      <h1>New Post</h1>
+
+      <%= render 'form', post: @post %>
+      <p align="center">
+	<%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+      </p>
+
+    </div>
+
+    <div class="col-2">
+    </div>
+
+  </div>
+</div>
