--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,8 +9,8 @@
       <%= render 'form', post: @post %>
       
       <p align="center">
-	<%= link_to 'Show', @post, :class=>"btn btn-secondary text-light"%> |
-	<%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+	<%= link_to 'Show', @post, class: "btn btn-secondary text-light" %> |
+	<%= link_to 'Back', posts_path, class: "btn btn-secondary text-light" %>
       </p>
     </div>
     
