--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,7 +40,7 @@
       
       <br>
       
-      <%= link_to 'New Post', new_post_path, :class=>"btn btn-secondary text-light" %>
+      <%= link_to 'New Post', new_post_path, class: "btn btn-secondary text-light" %>
     </div>
     
     <div class="col-2">
