--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,8 +33,8 @@
       </div>
 
       <p align="center">
-	<%= link_to 'Edit', edit_post_path(@post), :class=>"btn btn-secondary text-light" %> |
-	<%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+	<%= link_to 'Edit', edit_post_path(@post), class: "btn btn-secondary text-light" %> |
+	<%= link_to 'Back', posts_path, class: "btn btn-secondary text-light" %>
       </p>
     </div>
 
