--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,21 +19,21 @@
 
     <div class="form-group">
       <div class="field">
-	<%= form.label :title , {class: "form-label"} %>
-	<%= form.text_field :title , {class: "form-control", placeholder: "Post Title"} %>
+	<%= form.label :title , class: "form-label" %>
+	<%= form.text_field :title , class: "form-control", placeholder: "Post Title" %>
       </div>
     </div>
 
     <div class="form-group">
       <div class="field">
-	<%= form.label :body , {class: "form-label"} %>
-	<%= form.text_area :body , {class: "form-control", placeholder: "Post Text"} %>
+	<%= form.label :body , class: "form-label" %>
+	<%= form.text_area :body , class: "form-control", placeholder: "Post Text" %>
       </div>
     </div>
 
     
     <div class="actions">
-      <%= form.submit :class => "btn btn-primary" %>
+      <%= form.submit class: "btn btn-primary" %>
     </div>
 
   </div>
