--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
 
       <%= render 'form', post: @post %>
       <p align="center">
-	<%= link_to 'Back', posts_path, :class=>"btn btn-secondary text-light" %>
+	<%= link_to 'Back', posts_path, class: "btn btn-secondary text-light" %>
       </p>
 
     </div>
