--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,7 @@
 <h4>Add a comment:</h4>
 <p>
-<%= form_with model: [ @post, @post.comments.build ], local: false do |form| %>
+
+<%= form_with model: [ @post, @post.comments.build ], local: false, id: "comment-form" do |form| %>
 
 <div class="form-group">
   <div class="field>"
@@ -12,13 +13,13 @@
 <div class="form-group">
   <div class="field">
     <%= form.label :body, {class: "form-label"} %>
-    <%= form.text_area :body, class: "h4 form-control", placeholder: "Comment text" %>
+    <%= form.text_area :body, class: "h4 form-control", placeholder: "Comment text", required: true %>
   </div>
 </div>
   
 <div class="actions">
   <%= form.submit class: "btn btn-primary" %>
 </div>
-  
+
 <% end %>
 </p>
