--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,30 @@
   </head>
 
   <body>
-      
-      <nav class="navbar navbar-dark bg-secondary">
-	<div class="container">
-	  <div class="pl-50">
-	    <span class="navbar-brand mb-0 h1">Blog App</span>
-	  </div>
+
+    <!-- <div class="container-fluid"> -->
+    <!--   <nav class="navbar navbar-dark bg-secondary"> -->
+    <!-- 	<span class="navbar-brand mb-0 h1">Blog App</span> -->
+    <!--   </nav> -->
+      <!-- </div> -->
+    <div class="container-fluid">
+      <div class="row">
+
+	<div class="col-2">
 	</div>
-      </nav>
-    
+
+	<div class="col-8">
+	  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+	    <div class="container-fluid">
+	      <span class="navbar-brand">Blog App</span>
+	    </div>
+	  </nav>
+	</div>
+
+	<div class="col-2">
+	</div>
+      </div>
+    </div>
     
     <%= yield %>
 	    
